CANDLEPIN-475: Updated the product importer and resolution logic
- Fixed an issue that was preventing children products of products
  from being normalized during import
- Improved merging and resolution logic while processing product
  data stored on pools for older manifest formats
- Fixed several issues regarding data storage and encapsulation
  in the manifest product DTO
- Refactored logic surrounding product collection during export
- Updated tests and test suites which were erroneously using
  import objects as mocks